# onstage-contract

./: .gitignore  package-lock.json  package.json
contract/: Cargo.toml  deploy.sh
contract/character_nft/: Cargo.toml
contract/character_nft/src/: lib.rs
contract/neardev/: dev-account  dev-account.env
contract/nft_factory/: Cargo.toml
contract/nft_factory/src/: lib.rs
contract/platform_token/: Cargo.toml
contract/platform_token/src/: lib.rs
contract/scripts/: factory.sh  nft.sh
integration-tests/: Cargo.toml
integration-tests/src/: tests.rs
